--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@ https://templatemo.com/tm-527-sided
               <div class="tm-site-name-container">
                 <div class="tm-site-name-container-inner">
                   <h1 class="text-uppercase tm-text-primary tm-site-name">
-                    Sided
+                    Losers
                   </h1>
-                  <p class="tm-text-primary tm-site-description">
-                    new theme just for you
+                  <p class="tm-text-primary tm-site-description f-22">
+                    a winner is just a loser who tried one more time
                   </p>
                 </div>
               </div>
@@ -204,7 +204,7 @@ https://templatemo.com/tm-527-sided
                       <i class="fas fa-phone tm-contact-icon tm-phone-icon"></i>
                     </span>
                   </span>
-                  <span class="media-body"> 010-020-0340 </span>
+                  <span class="media-body"> 1234567890 </span>
                 </a>
               </div>
               <div class="media mb-5">
@@ -214,7 +214,7 @@ https://templatemo.com/tm-527-sided
                       <i class="fas fa-envelope tm-contact-icon"></i>
                     </span>
                   </span>
-                  <span class="media-body"> info@company.com </span>
+                  <span class="media-body"> loosers0003@gmail.com </span>
                 </a>
               </div>
               <div class="media">
@@ -225,8 +225,7 @@ https://templatemo.com/tm-527-sided
                     </span>
                   </span>
                   <span class="media-body">
-                    6120 Suspendisse ultricies<br />Scelerisque tellus, ID
-                    10260<br />Magna aliquet porttitor
+                    Rajahmundry<br />East Godavara Dist.,<br /> AndhraPradesh
                   </span>
                 </a>
               </div>
@@ -287,8 +286,7 @@ https://templatemo.com/tm-527-sided
                   suscipit ut.
                 </p>
                 <i
-                  >&ldquo;Lorem ipsum dolor sit amet, consectetur adipiscing
-                  elit. Duis cursus ac mauris maximus auctor.&rdquo;</i
+                  >&ldquo;You're never a loser until you quit trying.&rdquo;</i
                 >
               </div>
             </div>
@@ -309,7 +307,7 @@ https://templatemo.com/tm-527-sided
                     <i class="fab fa-instagram"></i>
                   </span>
                 </a>
-                <a class="tm-social-icon-container">
+                <a class="tm-social-icon-container" href="mailto: loosers0003@gmail.com">
                   <span class="tm-social-icon-container-inner">
                     <i class="fab fa-google-plus-g"></i>
                   </span>
@@ -320,9 +318,6 @@ https://templatemo.com/tm-527-sided
           <div class="row">
             <footer class="col-sm-12 col-md-6 offset-md-6 px-md-0">
               <p class="tm-copyright-text mb-0 tm-text-primary">
-                Copyright &copy; 2019 Company Name 
-                
-                - Design: <a rel="nofollow" href="https://www.facebook.com/templatemo">TemplateMo</a>
               </p>
             </footer>
           </div>
