text changes version1

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ https://templatemo.com/tm-527-sided
               <div class="tm-section-text-container">
                 <i class="tm-text-white">
                   <p class="mb-0">
-                    Nullam eget dignissim orci. Donec tincidunt blandit libero iaculis fermentum. Aliquam erat volutpat. Interger suscipit aliquam augue ac rutrum. Phasellus sit amet erat id sapien efficitur euismod.</p>
+                    Losers is a business in the form of a startup, a partnership or temporary organization designed to search for a business model to deliver new technology products or services or deliver existing technology products or services in new ways.</p>
                 </i>
               </div>
             </div>
@@ -55,7 +55,7 @@ https://templatemo.com/tm-527-sided
       </section>
 
       <!-- Our Place -->
-      <section id="our_place">
+      <!-- <section id="our_place">
         <div class="container-fluid">
           <div class="row">
             <div
@@ -85,7 +85,7 @@ https://templatemo.com/tm-527-sided
             </div>
           </div>
         </div>
-      </section>
+      </section> -->
 
       <!-- Fusce, Section 4 -->
       <section id="section_4" class="tm-section-4">
@@ -94,13 +94,10 @@ https://templatemo.com/tm-527-sided
             <div class="col-md-12 col-lg-6 tm-text-left-container">
               <div class="tm-section-text-container-3 tm-bg-white-alpha h-100">
                 <h2 class="tm-text-accent tm-section-title-mb">
-                  Fusce a porttitor augue
+                  JOIN US
                 </h2>
                 <p class="mb-0">
-                  Quisque rutrum dapibus odio vitae tincidunt. Etiam
-                  sollicitudin augue non porta interdum. Pellentesque placerat
-                  orci at libero ornare, nec viverra justo lobortis. Phasellus
-                  venenatis eros non.
+                  To be a great place to work, we need great people to work with us. We welcome applications from individuals with a passion for improving their skills.
                 </p>
               </div>
             </div>
@@ -122,7 +119,7 @@ https://templatemo.com/tm-527-sided
         <div class="container-fluid">
           <div class="row">
             <div class="col-12 tm-section-title-mb tm-gallery-title-col">
-              <h2 class="tm-section-title-2">Beautiful Rollovers</h2>
+              <h2 class="tm-section-title-2">Roles and Responsibilties</h2>
               <hr class="tm-section-title-underline" />
             </div>
 
@@ -135,8 +132,8 @@ https://templatemo.com/tm-527-sided
                     class="img-fluid"
                   />
                   <figcaption>
-                    <h2>Messy <span>Duke</span></h2>
-                    <p>When he looks at the sky, he feels to run.</p>
+                    <h2>Developers</h2>
+                    <p>Backend engineer should implement and manage software programs</p>
                     <a href="#">View more</a>
                   </figcaption>
                 </figure>
@@ -147,8 +144,8 @@ https://templatemo.com/tm-527-sided
                     class="img-fluid"
                   />
                   <figcaption>
-                    <h2>Messy <span>Duke</span></h2>
-                    <p>When he looks at the sky, he feels to run.</p>
+                    <h2>Designers</h2>
+                    <p>Designers should be fluent with Adobe cs products and common design tools.</p>
                     <a href="page-2.html">View more</a>
                   </figcaption>
                 </figure>
@@ -159,8 +156,8 @@ https://templatemo.com/tm-527-sided
                     class="img-fluid"
                   />
                   <figcaption>
-                    <h2>Messy <span>Duke</span></h2>
-                    <p>When he looks at the sky, he feels to run.</p>
+                    <h2>QA specialists</h2>
+                    <p>ability to communicate issues to developers and able to understand the software you’re working on</p>
                     <a href="#">View more</a>
                   </figcaption>
                 </figure>
@@ -171,8 +168,8 @@ https://templatemo.com/tm-527-sided
                     class="img-fluid"
                   />
                   <figcaption>
-                    <h2>Messy <span>Duke</span></h2>
-                    <p>When he looks at the sky, he feels to run.</p>
+                    <h2>Sales and Marketing specialists</h2>
+                    <p>Help improve sales processes and customer</p>
                     <a href="#">View more</a>
                   </figcaption>
                 </figure>
@@ -182,9 +179,8 @@ https://templatemo.com/tm-527-sided
             <div class="col-md-6 tm-section-col-4">
               <div class="tm-section-text-container-4">
                 <p class="tm-text-secondary mb-0">
-                  Description text for beautiful rollovers using text color code
-                  #999 for this line. Quisque pharetra mauris in libero vaius
-                  tristique.
+                  “Amateurs sit and wait for inspiration, the rest of us just get up and go to work.” — Stephen King.
+
                 </p>
               </div>
             </div>
@@ -208,7 +204,7 @@ https://templatemo.com/tm-527-sided
                 </a>
               </div>
               <div class="media mb-5">
-                <a href="mailto:" class="tm-contact-link">
+                <a href="mailto: loosers0003@gmail.com" class="tm-contact-link">
                   <span class="tm-contact-icon-container">
                     <span class="tm-contact-icon-container-inner">
                       <i class="fas fa-envelope tm-contact-icon"></i>
@@ -281,12 +277,10 @@ https://templatemo.com/tm-527-sided
             <div class="col-sm-12 col-md-6">
               <div class="tm-section-text-container-5 tm-text-white">
                 <p>
-                  Fusce a porttitor augue. Phasellus nec faucibus erat, vitae
-                  sagittis arcu. Quisque viverra dui purus, at rutrum nibh
-                  suscipit ut.
+                  Get in touch with us. have a question or comment? Drop us a line.
                 </p>
                 <i
-                  >&ldquo;You're never a loser until you quit trying.&rdquo;</i
+                  >&ldquo;You're never a loser until you quit trying.&rdquo; — Mike Ditka</i
                 >
               </div>
             </div>
